[gd_scene load_steps=5 format=3 uid="uid://b0wcp0wtm3xqr"]

[ext_resource type="Script" path="res://Scripts/PlayerControlsGDVer.gd" id="1_m4115"]
[ext_resource type="Script" path="res://Scripts/PlayerInteractRayGDVer.gd" id="2_dna1e"]
[ext_resource type="Script" path="res://Scripts/PlayerAnimation_Manager.cs" id="2_tqrjp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jvxt3"]

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_m4115")

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="MyVision" type="RayCast3D" parent="Pivot"]
target_position = Vector3(0, 0, -4)
debug_shape_custom_color = Color(0, 0.298039, 0.592157, 1)
debug_shape_thickness = 3
script = ExtResource("2_dna1e")

[node name="MyEyes" type="Camera3D" parent="Pivot"]

[node name="MyThoughts" type="Control" parent="Pivot/MyEyes"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="CenterPrompt" type="Label" parent="Pivot/MyEyes/MyThoughts"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = 16.0
offset_right = 0.5
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"TooltipLabel"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "
"

[node name="Model" type="Node3D" parent="Pivot"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot/Model"]
script = ExtResource("2_tqrjp")

[node name="MyBody" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_jvxt3")
